--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Dev - Web Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,11 +29,16 @@
                 <a href="#contact" class="button secondary-button">Get in Touch</a>
             </div>
         </div>
-        </section>
+    </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>As a web developer, I'm driven by a desire to build effective and engaging websites. My foundational skills include a strong understanding of HTML for creating website structure, CSS for making them visually appealing, and JavaScript for adding dynamic behavior. I'm also experienced with [mention 1-2 key frameworks or technologies like React or basic PHP if applicable, but keep it simple]. What truly excites me about web development is the constant evolution of the field and the opportunity to learn something new every day. I'm always eager to expand my skillset and tackle new challenges. For a more in-depth look at my qualifications and experiences, please visit my "About" page.</p>
+        <p>As a web developer, I'm driven by a desire to build effective and engaging websites. My foundational skills
+            include a strong understanding of HTML for creating website structure, CSS for making them visually
+            appealing, and JavaScript for adding dynamic behavior. What truly excites me about web
+            development is the constant evolution of the field and the opportunity to learn something new every day. I'm
+            always eager to expand my skillset and tackle new challenges. For a more in-depth look at my qualifications
+            and experiences, please visit my "About" page.</p>
         <div class="skills">
             <h3>Skills</h3>
             <ul>
@@ -51,16 +58,18 @@
             <div class="project-card">
                 <img src="./Image/Image2.jpg" alt="Project 1">
                 <h3>Simple CBT Exam</h3>
-                <p>This isa CBT test that allow users to answer CBT question an get the result athere the exam, Using PHP, HTML, CSS, JavaScript</p>
+                <p>This isa CBT test that allow users to answer CBT question an get the result athere the exam, Using
+                    PHP, HTML, CSS, JavaScript</p>
                 <a href="Error.html" class="button">View Details</a>
             </div>
             <div class="project-card">
                 <img src="./Image/Image3.jpg" alt="Project 2">
                 <h3>Shoping website For buying Goods Listed</h3>
-                <p>This website alows the admin of te website to add Goods available for sale to the client Dashbord, Using PHP, HTML, CSS, JavaScript</p>
+                <p>This website alows the admin of te website to add Goods available for sale to the client Dashbord,
+                    Using PHP, HTML, CSS, JavaScript</p>
                 <a href="Error.html" class="button">View Details</a>
             </div>
-            </div>
+        </div>
         <div class="view-all-projects">
             <a href="Error.html" class="button">View All Projects</a>
         </div>
@@ -69,7 +78,8 @@
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>I'm always open to new opportunities and collaborations. Feel free to reach out!</p>
-        <form action="Error.html" method="POST"> <div class="form-group">
+        <form action="Error.html" method="POST">
+            <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
             </div>
@@ -86,7 +96,7 @@
         <div class="social-links">
             <a href="https://wa.me/2349016336071" target="_blank">Whatshapp</a>
             <a href="https://www.facebook.com/share/16QGk8X5s6/?mibextid=wwXIfr" target="_blank">Facebook</a>
-            </div>
+        </div>
     </section>
 
     <footer>
@@ -95,4 +105,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
